--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,24 +45,138 @@ set-environment -g LC_CTYPE "ru_RU.UTF-8" # Sets ru encoding env
 ## Double click on window list opens new window
 bind-key -n DoubleClick1Status new-window
 
+## XOrg session block
+%if "#{==:#{XDG_SESSION_TYPE},x11}"
+
 ## Middle click to paste from the clipboard (xclip pkg must be installed)
 unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-## Copy but do not clear the selection
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-no-clear
-bind -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X clear-selection
+bind-key -n MouseDown2Pane \
+   run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
 
 ## Mouse middle click cancel copy mode and paste from buffer
-bind-key -T copy-mode-vi MouseDown2Pane send -X cancel \; run "tmux paste-buffer"
+bind-key -T copy-mode-vi MouseDown2Pane \
+   select-pane \; \
+   send -X cancel \; \
+   run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+
+## Copy but do not clear the selection
+bind -T copy-mode-vi MouseDragEnd1Pane \
+   select-pane \; \
+   send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+
+bind -T copy-mode-vi MouseDown1Pane \
+   select-pane \; \
+   send-keys -X clear-selection
+
+# Double LMB Select & Copy (Word)
+bind-key -n DoubleClick1Pane \
+   select-pane \; \
+   copy-mode -M \; \
+   send-keys -X select-word \; \
+   send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard" \; \
+   run "sleep 0.15"
+    
+bind-key -T copy-mode-vi DoubleClick1Pane \
+   select-pane \; \
+   send-keys -X select-word \; \
+   send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+
+# Triple LMB: Select & Copy (Line)
+bind-key -n TripleClick1Pane \
+   select-pane \; \
+   copy-mode -M \; \
+   send-keys -X select-line \; \
+   send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+
+bind-key -T copy-mode-vi TripleClick1Pane \
+   select-pane \; \
+   send-keys -X select-line \; \
+   send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+
+## No XOrg session block
+%else
+
+## Middle click to paste from the clipboard (xclip pkg must be installed)
+unbind-key MouseDown2Pane
+bind-key -n MouseDown2Pane paste-buffer
+
+## Mouse middle click cancel copy mode and paste from buffer
+bind-key -T copy-mode-vi MouseDown2Pane \
+   select-pane \; \
+   send -X cancel \; \
+   paste-buffer
+
+## Copy but do not clear the selection
+bind -T copy-mode-vi MouseDragEnd1Pane \
+   select-pane \; \
+   send-keys -X copy-selection-no-clear
+
+bind -T copy-mode-vi MouseDown1Pane \
+   select-pane \; \
+   send-keys -X clear-selection
+
+# Double LMB Select & Copy (Word)
+bind-key -n DoubleClick1Pane \
+   select-pane \; \
+   copy-mode -M \; \
+   send-keys -X select-word \; \
+   send-keys -X copy-selection-no-clear
+
+bind-key -T copy-mode-vi DoubleClick1Pane \
+   select-pane \; \
+   send-keys -X select-word \; \
+   send-keys -X copy-selection-no-clear
+
+# Triple LMB: Select & Copy (Line)
+bind-key -n TripleClick1Pane \
+   select-pane \; \
+   copy-mode -M \; \
+   send-keys -X select-line \; \
+   send-keys -X copy-selection-no-clear
+
+bind-key -T copy-mode-vi TripleClick1Pane \
+   select-pane \; \
+   send-keys -X select-line \; \
+   send-keys -X copy-selection-no-clear
+
+%endif
 
 ############################
 ### KEYBOARD KEYBINDINGS ###
 ############################
 
 ## Binds "v" and "y" keys to select and yank in copy mode
+bind-key 'v' copy-mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
+%if "#{==:#{XDG_SESSION_TYPE},x11}"
+
+bind-key -T copy-mode-vi 'y' \
+   select-pane \; \
+   send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
+
+bind-key 'p' \
+   run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+
+bind-key -T copy-mode-vi 'p' \
+   select-pane \; \
+   send -X cancel \; \
+   run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+
+%else
+
+bind-key -T copy-mode-vi 'y' \
+   select-pane \; \
+   send -X copy-selection-and-cancel
+
+bind-key 'p' tmux paste-buffer
+
+bind-key -T copy-mode-vi 'p' \
+   select-pane \; \
+   send -X cancel \; \
+   tmux paste-buffer
+
+%endif
 
 ## VI keys for panes navigate
 bind-key -r -T prefix h select-pane -L
@@ -77,9 +191,11 @@ bind-key -r -T prefix K resize-pane -U 2
 bind-key -r -T prefix L resize-pane -R 2
 
 ## Binds Prefix+F5 keys to manually save tmux invironment
-bind-key -T prefix F5 run-shell '~/.config/tmux/plugins/tmux-resurrect/scripts/save.sh && mv -f $(find ~/.local/share/tmux/resurrect -type f -name "tmux_resurrect_*.txt" -size +0c | sort | tail -1) ~/.local/share/tmux/resurrect/main.txt && tmux display-message "Environment saved manually!"'
+bind-key -T prefix F5 run-shell \
+    '~/.config/tmux/plugins/tmux-resurrect/scripts/save.sh && mv -f $(find ~/.local/share/tmux/resurrect -type f -name "tmux_resurrect_*.txt" -size +0c | sort | tail -1) ~/.local/share/tmux/resurrect/main.txt && tmux display-message "Environment saved manually!"'
 ## Binds Prefix+F6 keys to restore last manually saved tmux environment
-bind-key -T prefix F6 run-shell 'ln -sf ~/.local/share/tmux/resurrect/main.txt ~/.local/share/tmux/resurrect/last && ~/.config/tmux/plugins/tmux-resurrect/scripts/restore.sh'
+bind-key -T prefix F6 run-shell \
+    'ln -sf ~/.local/share/tmux/resurrect/main.txt ~/.local/share/tmux/resurrect/last && ~/.config/tmux/plugins/tmux-resurrect/scripts/restore.sh'
 
 ######################
 ### PLUGINS CONFIG ###
@@ -108,9 +224,13 @@ set -g @plugin 'arcticicestudio/nord-tmux' # Nord theme for tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Save and restore tmux env
 set -g @plugin 'tmux-plugins/tmux-continuum' # Automates save and restore actions of tmux-resurrect
 
-## Autoinstall TPM and plugins on new machine
+## Autoinstall TPM on new machine
 if "test ! -d ~/.config/tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm'"
+
+## Autoinstall other plugins on new machine
+run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/bin/install_plugins'
 
 ## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
