Fix sytnax err in config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -169,12 +169,12 @@ bind-key -T copy-mode-vi 'y' \
    select-pane \; \
    send -X copy-selection-and-cancel
 
-bind-key 'p' tmux paste-buffer
+bind-key 'p' paste-buffer
 
 bind-key -T copy-mode-vi 'p' \
    select-pane \; \
    send -X cancel \; \
-   tmux paste-buffer
+   paste-buffer
 
 %endif
 
