--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,20 +2,13 @@
 ### TMUX CLI COMMANDS ###
 #########################
 
-# Reload tmux configuration
-# tmux source ~/.config/tmux/tmux.conf
+# Reload tmux configuration               tmux source ~/.config/tmux/tmux.conf
+# Attach to an existing session           tmux attach -t session_name
+# Kill all tmux processes                 pkill -f tmux
+# Install specified plugins via TPM       prefix + I
+# Run custom shell script at startup      run-shell "~/your/command.sh"
+# (in tmux.conf)
 
-# Attach to an existing session
-# tmux attach -t session_name
-
-# Kill all tmux processes
-# pkill -f tmux
-
-# Install specified plugins via TPM
-# prefix + I
-
-# Run custom shell script at startup (in tmux.conf)
-# run-shell "~/your/command.sh"
 
 ########################
 ### GENERAL SETTINGS ###
