--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -129,7 +129,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # 'v' to start selecting in
       send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
 
    # 'p' in normal mode, paste from clipboard buffer using xclip
-   bind-key 'p' \
+   bind-key 'P' \
       run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
 
    # 'p' in copy mode, cancel copy mode and paste from clipboard buffer using xclip
@@ -144,7 +144,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # 'v' to start selecting in
       send -X copy-selection-and-cancel
 
    # When pressing 'p' in normal mode, paste from tmux buffer
-   bind-key 'p' paste-buffer
+   bind-key 'P' paste-buffer
 
    # When pressing 'p' in copy mode, cancel copy mode and paste from tmux buffer
    bind-key -T copy-mode-vi 'p' \
