--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -123,20 +123,34 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # 'v' to start selecting in
 
 # X11-specific bindings
 %if "#{==:#{XDG_SESSION_TYPE},x11}"
-   # 'y' in copy mode, copy selection to clipboard using xclip and cancel copy mode
+   # 'Enter' and 'y' in copy mode, copy selection to clipboard using xclip and cancel copy mode
+   bind-key -T copy-mode-vi 'Enter' \
+      select-pane \; \
+      send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
+   
    bind-key -T copy-mode-vi 'y' \
       select-pane \; \
       send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
 
-   # 'p' in normal mode, paste from clipboard buffer using xclip
+   # ']' and 'p' in normal mode, paste from clipboard buffer using xclip
+   bind-key ']' \
+      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+   
    bind-key 'P' \
       run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
 
-   # 'p' in copy mode, cancel copy mode and paste from clipboard buffer using xclip
+   # ']' and 'p' in copy mode, cancel copy mode and paste from clipboard buffer using xclip
+   bind-key -T copy-mode-vi ']' \
+      select-pane \; \
+      send -X cancel \; \
+      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+   
    bind-key -T copy-mode-vi 'p' \
       select-pane \; \
       send -X cancel \; \
       run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+
+   
 %else # If not in X11
    # 'y' in copy mode, copy selection to tmux buffer and cancel copy mode
    bind-key -T copy-mode-vi 'y' \
