--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -53,13 +53,13 @@ bind-key -n DoubleClick1Status new-window
    # Middle click pastes from clipboard
    unbind-key MouseDown2Pane
    bind-key -n MouseDown2Pane \
-      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
 
    # Middle click cancels copy mode and pastes from clipboard
    bind-key -T copy-mode-vi MouseDown2Pane \
       select-pane \; \
       send -X cancel \; \
-      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
 
    # Copy selection to clipboard without clearing it
    bind -T copy-mode-vi MouseDragEnd1Pane \
@@ -134,21 +134,21 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # 'v' to start selecting in
 
    # ']' and 'p' in normal mode, paste from clipboard buffer using xclip
    bind-key ']' \
-      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
    
    bind-key 'P' \
-      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
 
    # ']' and 'p' in copy mode, cancel copy mode and paste from clipboard buffer using xclip
    bind-key -T copy-mode-vi ']' \
       select-pane \; \
       send -X cancel \; \
-      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
    
    bind-key -T copy-mode-vi 'p' \
       select-pane \; \
       send -X cancel \; \
-      run "tmux set-buffer \"$(xclip -out -sel clipboard)\"; tmux paste-buffer"
+      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
 
 %else # If not in X11
    # 'y' in copy mode, copy selection to tmux buffer and cancel copy mode
