--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,8 +14,8 @@
 ### GENERAL SETTINGS ###
 ########################
 
-set-option -g default-terminal "screen-256color" # Enable 256 colors in terminal
-#set -g default-terminal 'tmux-256color'
+# set-option -g default-terminal "screen-256color" # Enable 256 colors in terminal
+set -g default-terminal 'tmux-256color'
 #set -g default-terminal 'xterm-256color'
 set -ga terminal-overrides ',*:Tc'   # Enable TrueColors
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # Support cursor shape changes
@@ -40,6 +40,7 @@ set-environment -g LC_CTYPE "ru_RU.UTF-8" # Set environment encoding for Russian
 ## Extra status bar line
 #setw -g pane-border-status bottom    # Border placement
 #setw -g pane-border-format '─'       # Border style
+
 
 #########################
 ### MOUSE KEYBINDINGS ###
@@ -114,6 +115,7 @@ bind-key -n DoubleClick1Status new-window
       send-keys -X copy-selection-no-clear
 %endif
 
+
 ############################
 ### KEYBOARD KEYBINDINGS ###
 ############################
@@ -187,6 +189,7 @@ bind-key -T prefix F5 run-shell \
 bind-key -T prefix F6 run-shell \
     'ln -sf ~/.local/share/tmux/resurrect/main.txt ~/.local/share/tmux/resurrect/last && ~/.config/tmux/plugins/tmux-resurrect/scripts/restore.sh'
 
+
 ####################
 ### PLUGINS LIST ###
 ####################
@@ -197,12 +200,14 @@ set -g @plugin 'tmux-plugins/tmux-sensible'  # Optimal tmux default settings
 set -g @plugin 'arcticicestudio/nord-tmux'   # Nord theme for tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Save and restore tmux env
 set -g @plugin 'tmux-plugins/tmux-continuum' # Automates save and restore actions of tmux-resurrect
+set -g @plugin 'sainnhe/tmux-fzf'            # Fuzzy finder
+
 
 ######################
 ### PLUGINS CONFIG ###
 ######################
 
-# Configure tmux-resurrect
+# [tmux-resurrect]
 # Cleanup old session files
 run-shell \
    'find ~/.local/share/tmux/resurrect/ -type f -name "*.txt" ! -name "main.txt" -mtime +3 -delete'
@@ -210,10 +215,42 @@ run-shell \
 set -g @resurrect-strategy-nvim 'session' # Use sessions for restoring Neovim
 set -g @resurrect-processes 'ssh ranger mc tmux cmatrix ipython' # Processes to restore
 
-# Configure tmux-continuum
+# [tmux-continuum]
 set -g @continuum-boot 'on'          # Auto-start tmux via systemd
 set -g @continuum-restore 'on'       # Auto-restore tmux sessions
 set -g @continuum-save-interval '60' # Auto-save every 60 minutes
+
+# [tmux-fzf]
+# Deault options
+set-environment -g TMUX_FZF_OPTIONS "
+    -p -w 65% -h 35% -m
+    --exact
+    --color=fg:#e5e9f0,bg:#2e3440,hl:#81a1c1
+    --color=fg+:#e5e9f0,bg+:#2e3440,hl+:#81a1c1
+    --color=info:#eacb8a,prompt:#bf6069,pointer:#b48dac
+    --color=marker:#a3be8b,spinner:#b48dac,header:#a3be8b
+    --color=border:#5e81ac
+    --border=rounded
+"
+
+# Quick commands
+bind-key C-b run-shell "
+    command_list="~/.config/tmux/commands.list"
+    command=\$(cat \$command_list | fzf-tmux \$TMUX_FZF_OPTIONS --reverse --prompt=\"⚡ Command: \") && \
+    tmux send-keys \"\${command#*] }\" || \
+    exit 0
+"
+
+# Quick SSH connection from ~/.ssh/config
+bind-key B run-shell "
+    host=\$(grep -E \"^Host \" ~/.ssh/config | sed \"s/^Host //\" | fzf-tmux \$TMUX_FZF_OPTIONS --reverse --prompt=\"🌐 SSH: \") && \
+    tmux new-window -n \"SSH [\$host\"] \"ssh \$host\" || \
+    exit 0
+"
+
+###########################
+### PLUGINS AUTOINSTALL ###
+###########################
 
 # Ensure TPM plugin is installed
 if "test ! -d ~/.config/tmux/plugins/tpm" \
@@ -222,6 +259,11 @@ if "test ! -d ~/.config/tmux/plugins/tpm" \
 # Autoinstall other plugins on new machine
 run '~/.config/tmux/plugins/tpm/tpm'
 run '~/.config/tmux/plugins/tpm/bin/install_plugins'
+
+
+####################
+### PLUGINS INIT ###
+####################
 
 # Initialize TPM (keep this line at very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
