Upd tmux.conf, command.list

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -49,71 +49,104 @@ set-environment -g LC_CTYPE "ru_RU.UTF-8" # Set environment encoding for Russian
 # Open a new window with double-click on status bar
 bind-key -n DoubleClick1Status new-window
 
-# X11-specific bindings
-%if "#{==:#{XDG_SESSION_TYPE},x11}"
-   # Middle click pastes from clipboard
-   unbind-key MouseDown2Pane
-   bind-key -n MouseDown2Pane \
-      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+# Wayland bindings
+if-shell 'command -v wayland-info > /dev/null 2>&1' {
+    # Middle click pastes from clipboard
+    unbind-key MouseDown2Pane
+    bind-key -n MouseDown2Pane \
+        run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
 
-   # Middle click cancels copy mode and pastes from clipboard
-   bind-key -T copy-mode-vi MouseDown2Pane \
-      select-pane \; \
-      send -X cancel \; \
-      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+    # Middle click cancels copy mode and pastes from clipboard
+    bind-key -T copy-mode-vi MouseDown2Pane \
+        select-pane \; \
+        send -X cancel \; \
+        run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
 
-   # Copy selection to clipboard without clearing it
-   bind -T copy-mode-vi MouseDragEnd1Pane \
-      select-pane \; \
-      send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+    # Copy selection to clipboard without clearing it
+    bind -T copy-mode-vi MouseDragEnd1Pane \
+        select-pane \; \
+        send-keys -X copy-pipe-no-clear "wl-copy"
 
-   # Cancel selecting on LBM click
-   bind -T copy-mode-vi MouseDown1Pane \
-      select-pane \; \
-      send-keys -X clear-selection
-   
-   # Double and triple LBM click for word/line selection in copy mode
-   bind-key -T copy-mode-vi DoubleClick1Pane \
-      select-pane \; \
-      send-keys -X select-word \; \
-      send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+    # Cancel selecting on LBM click
+    bind -T copy-mode-vi MouseDown1Pane \
+        select-pane \; \
+        send-keys -X clear-selection
 
-   bind-key -T copy-mode-vi TripleClick1Pane \
-      select-pane \; \
-      send-keys -X select-line \; \
-      send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
-%else # Non-X11 sessions bindings
-   # Middle click pastes from buffer
-   unbind-key MouseDown2Pane
-   bind-key -n MouseDown2Pane paste-buffer
+    # Double and triple LBM click for word/line selection in copy mode
+    bind-key -T copy-mode-vi DoubleClick1Pane \
+        select-pane \; \
+        send-keys -X select-word \; \
+        send-keys -X copy-pipe-no-clear "wl-copy"
 
-   # Middle click cancels copy mode and pastes from buffer
-   bind-key -T copy-mode-vi MouseDown2Pane \
-      select-pane \; \
-      send -X cancel \; \
-      paste-buffer
+    bind-key -T copy-mode-vi TripleClick1Pane \
+        select-pane \; \
+        send-keys -X select-line \; \
+        send-keys -X copy-pipe-no-clear "wl-copy"
 
-   # Copy selection without clearing it
-   bind -T copy-mode-vi MouseDragEnd1Pane \
-      select-pane \; \
-      send-keys -X copy-selection-no-clear
+} {
+    # X11 bindings
+    if-shell 'command -v xclip > /dev/null 2>&1' {
+        # Middle click pastes from clipboard
+        unbind-key MouseDown2Pane
+        bind-key -n MouseDown2Pane \
+            run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
 
-   # Cancel selecting on LBM click
-   bind -T copy-mode-vi MouseDown1Pane \
-      select-pane \; \
-      send-keys -X clear-selection
+        # Middle click cancels copy mode and pastes from clipboard
+        bind-key -T copy-mode-vi MouseDown2Pane \
+            select-pane \; \
+            send -X cancel \; \
+            run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
 
-   # Double and triple LBM click for word/line selection in copy mode
-   bind-key -T copy-mode-vi DoubleClick1Pane \
-      select-pane \; \
-      send-keys -X select-word \; \
-      send-keys -X copy-selection-no-clear
+        # Copy selection to clipboard without clearing it
+        bind -T copy-mode-vi MouseDragEnd1Pane \
+            select-pane \; \
+            send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
 
-   bind-key -T copy-mode-vi TripleClick1Pane \
-      select-pane \; \
-      send-keys -X select-line \; \
-      send-keys -X copy-selection-no-clear
-%endif
+        # Cancel selecting on LBM click
+        bind -T copy-mode-vi MouseDown1Pane \
+            select-pane \; \
+            send-keys -X clear-selection
+
+        # Double and triple LBM click for word/line selection in copy mode
+        bind-key -T copy-mode-vi DoubleClick1Pane \
+            select-pane \; \
+            send-keys -X select-word \; \
+            send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+
+        bind-key -T copy-mode-vi TripleClick1Pane \
+            select-pane \; \
+            send-keys -X select-line \; \
+            send-keys -X copy-pipe-no-clear "xclip -in -sel clipboard"
+
+    } {
+        # Fallback (non-X11, non-Wayland)
+        unbind-key MouseDown2Pane
+        bind-key -n MouseDown2Pane paste-buffer
+
+        bind-key -T copy-mode-vi MouseDown2Pane \
+            select-pane \; \
+            send -X cancel \; \
+            paste-buffer
+
+        bind -T copy-mode-vi MouseDragEnd1Pane \
+            select-pane \; \
+            send-keys -X copy-selection-no-clear
+
+        bind -T copy-mode-vi MouseDown1Pane \
+            select-pane \; \
+            send-keys -X clear-selection
+
+        bind-key -T copy-mode-vi DoubleClick1Pane \
+            select-pane \; \
+            send-keys -X select-word \; \
+            send-keys -X copy-selection-no-clear
+
+        bind-key -T copy-mode-vi TripleClick1Pane \
+            select-pane \; \
+            send-keys -X select-line \; \
+            send-keys -X copy-selection-no-clear
+    }
+}
 
 
 ############################
@@ -123,50 +156,79 @@ bind-key -n DoubleClick1Status new-window
 bind-key 'v' copy-mode # 'prefix+v' to enable copy mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection # 'v' to start selecting in copy mode
 
-# X11-specific bindings
-%if "#{==:#{XDG_SESSION_TYPE},x11}"
-   # 'Enter' and 'y' in copy mode, copy selection to clipboard using xclip and cancel copy mode
-   bind-key -T copy-mode-vi 'Enter' \
-      select-pane \; \
-      send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
+# Wayland-specific bindings
+if-shell 'command -v wayland-info > /dev/null 2>&1' {
+    # 'Enter' and 'y' in copy mode: copy selection to clipboard using wl-copy and cancel copy mode
+    bind-key -T copy-mode-vi 'Enter' \
+        select-pane \; \
+        send -X copy-pipe-and-cancel "wl-copy"
    
-   bind-key -T copy-mode-vi 'y' \
-      select-pane \; \
-      send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
+    bind-key -T copy-mode-vi 'y' \
+        select-pane \; \
+        send -X copy-pipe-and-cancel "wl-copy"
 
-   # ']' and 'p' in normal mode, paste from clipboard buffer using xclip
-   bind-key ']' \
-      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+    # ']' and 'P' in normal mode: paste from clipboard buffer using wl-paste
+    bind-key ']' \
+        run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
    
-   bind-key 'P' \
-      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+    bind-key 'P' \
+        run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
 
-   # ']' and 'p' in copy mode, cancel copy mode and paste from clipboard buffer using xclip
-   bind-key -T copy-mode-vi ']' \
-      select-pane \; \
-      send -X cancel \; \
-      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+    # ']' and 'p' in copy mode: cancel copy mode and paste from clipboard buffer using wl-paste
+    bind-key -T copy-mode-vi ']' \
+        select-pane \; \
+        send -X cancel \; \
+        run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
    
-   bind-key -T copy-mode-vi 'p' \
-      select-pane \; \
-      send -X cancel \; \
-      run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+    bind-key -T copy-mode-vi 'p' \
+        select-pane \; \
+        send -X cancel \; \
+        run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
 
-%else # If not in X11
-   # 'y' in copy mode, copy selection to tmux buffer and cancel copy mode
-   bind-key -T copy-mode-vi 'y' \
-      select-pane \; \
-      send -X copy-selection-and-cancel
+} {
+    # X11-specific bindings
+    if-shell 'command -v xclip > /dev/null 2>&1' {
+        # 'Enter' and 'y' in copy mode: copy selection to clipboard using xclip and cancel copy mode
+        bind-key -T copy-mode-vi 'Enter' \
+            select-pane \; \
+            send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
+       
+        bind-key -T copy-mode-vi 'y' \
+            select-pane \; \
+            send -X copy-pipe-and-cancel "xclip -in -sel clipboard"
 
-   # When pressing 'p' in normal mode, paste from tmux buffer
-   bind-key 'P' paste-buffer
+        # ']' and 'P' in normal mode: paste from clipboard buffer using xclip
+        bind-key ']' \
+            run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+       
+        bind-key 'P' \
+            run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
 
-   # When pressing 'p' in copy mode, cancel copy mode and paste from tmux buffer
-   bind-key -T copy-mode-vi 'p' \
-      select-pane \; \
-      send -X cancel \; \
-      paste-buffer
-%endif
+        # ']' and 'p' in copy mode: cancel copy mode and paste from clipboard buffer using xclip
+        bind-key -T copy-mode-vi ']' \
+            select-pane \; \
+            send -X cancel \; \
+            run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+       
+        bind-key -T copy-mode-vi 'p' \
+            select-pane \; \
+            send -X cancel \; \
+            run 'tmux set-buffer "$(xclip -out -sel clipboard)"; tmux paste-buffer'
+
+    } {
+        # Fallback: no Wayland or X11 clipboard tools
+        bind-key -T copy-mode-vi 'y' \
+            select-pane \; \
+            send -X copy-selection-and-cancel
+
+        bind-key 'P' paste-buffer
+
+        bind-key -T copy-mode-vi 'p' \
+            select-pane \; \
+            send -X cancel \; \
+            paste-buffer
+    }
+}
 
 # vi-like navigation for panes
 bind-key -r -T prefix h select-pane -L
